@@ -1,4 +1,4 @@
-/* $Id: cmd-link-window.c,v 1.24 2008-06-25 20:33:20 nicm Exp $ */
+/* $Id: cmd-link-window.c,v 1.25 2008-11-16 10:10:26 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -79,6 +79,7 @@ cmd_link_window_exec(struct cmd *self, struct cmd_ctx *ctx)
 			 * if this makes it empty.
 			 */
 			session_alert_cancel(dst, wl_dst);
+			winlink_stack_remove(&dst->lastw, wl_dst);
 			winlink_remove(&dst->windows, wl_dst);
 
 			/* Force select/redraw if current. */
@@ -86,8 +87,6 @@ cmd_link_window_exec(struct cmd *self, struct cmd_ctx *ctx)
 				data->flags &= ~CMD_DFLAG;
 				dst->curw = NULL;
 			}
-			if (wl_dst == dst->lastw)
-				dst->lastw = NULL;
 		}
 	}
 
